fix alignment and min width of datetime column in logs view

--- a/web/skins/classic/css/base/views/log.css
+++ b/web/skins/classic/css/base/views/log.css
@@ -16,3 +16,14 @@ tr.log-dbg td {
     font-style: italic;
 }
 
+th[data-field="DateTime"],
+th[data-field="Component"],
+th[data-field="Code"],
+th[data-field="Message"],
+th[data-field="File"],
+th[data-field="Line"] {
+  text-align: left;
+}
+th[data-field="DateTime"] {
+  min-width: 135px;
+}
